# wasm-rdp

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/workflows/: auto-release.yml  release.yml
build-out/: .rustc_info.json
build-out/debug/.fingerprint/bytes-8c3f60db71d6dae3/: lib-bytes
build-out/debug/.fingerprint/cfg-if-26ef73b6fc7ab60c/: lib-cfg_if
build-out/debug/.fingerprint/futures-core-95f0cee0781c0b1b/: lib-futures_core
build-out/debug/.fingerprint/itoa-2671aa452abccd39/: lib-itoa.json
build-out/debug/.fingerprint/pin-project-lite-f7bef5802155e12f/: lib-pin_project_lite  lib-pin_project_lite.json
build-out/debug/.fingerprint/proc-macro2-1ee1cfdc466af48f/: build-script-build-script-build
build-out/debug/.fingerprint/quote-49ad6947ff1b3afe/: output-build-script-build-script-build
build-out/debug/.fingerprint/unicode-ident-f88ee447fb0a070c/: lib-unicode_ident.json
build-out/debug/.fingerprint/windows-link-d2f160bb0547be5e/: lib-windows_link  lib-windows_link.json
build-out/debug/.fingerprint/windows-sys-3d5669fe59d55179/: lib-windows_sys
crates/ironrdp-rdpsnd/: Cargo.toml  README.md
crates/ironrdp-rdpsnd/src/: client.rs
docs/: audio.md  clipboard.md  credssp.md  graphics.md  input.md
scripts/: build-ubuntu.sh  build-windows.ps1  build-wsl.sh  install-service-windows.ps1  ironbridge.service
server/: Cargo.toml  build.rs
server/src/: main.rs
wasm/: Cargo.toml  build.rs
wasm/src/: audio.rs  canvas.rs  clipboard.rs  framed.rs  input.rs  lib.rs  session.rs
web/: app.js  audio-worklet.js  index.html  style.css
web/pkg/: wasm.js  wasm_bg.wasm
