[workspace]
members = ["server", "wasm"]
resolver = "2"

# Optimized release builds for both the server and the WASM decoder.
# LTO + a single codegen unit give the biggest win for the decode-heavy
# WASM hot loop; panic=abort also shrinks the WASM binary (faster first load).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[patch."https://github.com/Devolutions/IronRDP.git"]
 ironrdp-session = { git = "https://github.com/amartyaa/IronRDP.git", branch = "feat/multi-monitor-support" }
 ironrdp         = { git = "https://github.com/amartyaa/IronRDP.git", branch = "feat/multi-monitor-support" }
 ironrdp-core    = { git = "https://github.com/amartyaa/IronRDP.git", branch = "feat/multi-monitor-support" }
 ironrdp-cliprdr-format = { git = "https://github.com/amartyaa/IronRDP.git", branch = "feat/multi-monitor-support" }
# Local-path patch (frame-marker dev) — re-enable to iterate on the fork locally:
# ironrdp-session = { path = "../rdp-reference/IronRDP-fork/crates/ironrdp-session" }
# ironrdp = { path = "../rdp-reference/IronRDP-fork/crates/ironrdp" }
# ironrdp-core = { path = "../rdp-reference/IronRDP-fork/crates/ironrdp-core" }
# ironrdp-cliprdr-format = { path = "../rdp-reference/IronRDP-fork/crates/ironrdp-cliprdr-format" }
ironrdp-rdpsnd = { path = "crates/ironrdp-rdpsnd" }
[patch."https://github.com/amartyaa/IronRDP.git"]
ironrdp-rdpsnd = { path = "crates/ironrdp-rdpsnd" }