[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rust-embed = "8"
mime_guess = "2"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

