[package]
name = "ironrdp-rdpsnd"
version = "0.7.0"
description = "RDPSND static channel for audio output implemented as described in MS-RDPEA"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[features]
default = []
std = []

[dependencies]
bitflags = "2.11"
tracing = { version = "0.1", features = ["log"] }
ironrdp-svc = { git = "https://github.com/amartyaa/IronRDP.git", branch = "master", version = "0.6" }
ironrdp-core = { git = "https://github.com/amartyaa/IronRDP.git", branch = "master", version = "0.1", features = ["alloc"] }
ironrdp-pdu = { git = "https://github.com/amartyaa/IronRDP.git", branch = "master", version = "0.7", features = ["alloc"] }
